# document_preprocessor

./: .gitignore  CLAUDE.md  NOTICE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/document_preprocessor/: __init__.py  cli.py  core.py  main.py
tests/: test_cli.py  test_config.py  test_geometry.py  test_otsu.py  test_pipeline_directory.py  test_pipeline_single.py
